--- a/main.ui
+++ b/main.ui
@@ -1788,13 +1788,13 @@ p, li { white-space: pre-wrap; }
                        <property name="geometry">
                         <rect>
                          <x>220</x>
-                         <y>100</y>
+                         <y>60</y>
                          <width>3</width>
-                         <height>490</height>
+                         <height>550</height>
                         </rect>
                        </property>
                        <property name="styleSheet">
-                        <string notr="true">background-color: rgb(170, 0, 255)</string>
+                        <string notr="true">background-color: rgb(189, 147, 249)</string>
                        </property>
                        <property name="orientation">
                         <enum>Qt::Vertical</enum>
@@ -1905,7 +1905,7 @@ p, li { white-space: pre-wrap; }
                         <string notr="true">background-color: transparent;</string>
                        </property>
                        <property name="currentIndex">
-                        <number>3</number>
+                        <number>0</number>
                        </property>
                        <widget class="QWidget" name="page">
                         <widget class="QLabel" name="label">
@@ -2180,8 +2180,8 @@ p, li { white-space: pre-wrap; }
                       <widget class="QLabel" name="title">
                        <property name="geometry">
                         <rect>
-                         <x>560</x>
-                         <y>10</y>
+                         <x>10</x>
+                         <y>-10</y>
                          <width>251</width>
                          <height>41</height>
                         </rect>
@@ -2201,7 +2201,7 @@ p, li { white-space: pre-wrap; }
                        <property name="geometry">
                         <rect>
                          <x>240</x>
-                         <y>40</y>
+                         <y>70</y>
                          <width>81</width>
                          <height>41</height>
                         </rect>
@@ -2223,7 +2223,7 @@ p, li { white-space: pre-wrap; }
                        <property name="geometry">
                         <rect>
                          <x>20</x>
-                         <y>40</y>
+                         <y>70</y>
                          <width>211</width>
                          <height>51</height>
                         </rect>
@@ -2238,22 +2238,22 @@ p, li { white-space: pre-wrap; }
                       <widget class="QTableWidget" name="tableWidget">
                        <property name="geometry">
                         <rect>
-                         <x>20</x>
-                         <y>100</y>
+                         <x>10</x>
+                         <y>130</y>
                          <width>511</width>
                          <height>481</height>
                         </rect>
                        </property>
                        <property name="styleSheet">
-                        <string notr="true">font-size: 24px;
+                        <string notr="true">font-size: 19px;
 </string>
                        </property>
                       </widget>
                       <widget class="QLabel" name="label_stat">
                        <property name="geometry">
                         <rect>
-                         <x>570</x>
-                         <y>50</y>
+                         <x>560</x>
+                         <y>0</y>
                          <width>201</width>
                          <height>51</height>
                         </rect>
@@ -2269,10 +2269,10 @@ color: rgb(0, 255, 127)</string>
                       <widget class="QLabel" name="stat">
                        <property name="geometry">
                         <rect>
-                         <x>570</x>
-                         <y>100</y>
+                         <x>560</x>
+                         <y>60</y>
                          <width>581</width>
-                         <height>131</height>
+                         <height>141</height>
                         </rect>
                        </property>
                        <property name="font">
@@ -2296,10 +2296,10 @@ color: rgb(0, 255, 127)</string>
                       <widget class="QLabel" name="label_diagram">
                        <property name="geometry">
                         <rect>
-                         <x>560</x>
-                         <y>240</y>
-                         <width>521</width>
-                         <height>351</height>
+                         <x>540</x>
+                         <y>220</y>
+                         <width>631</width>
+                         <height>391</height>
                         </rect>
                        </property>
                        <property name="font">
@@ -2311,6 +2311,38 @@ color: rgb(0, 255, 127)</string>
                        </property>
                        <property name="text">
                         <string/>
+                       </property>
+                      </widget>
+                      <widget class="Line" name="line_2">
+                       <property name="geometry">
+                        <rect>
+                         <x>530</x>
+                         <y>-10</y>
+                         <width>3</width>
+                         <height>636</height>
+                        </rect>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">background-color: rgb(189, 147, 249)</string>
+                       </property>
+                       <property name="orientation">
+                        <enum>Qt::Vertical</enum>
+                       </property>
+                      </widget>
+                      <widget class="Line" name="line_3">
+                       <property name="geometry">
+                        <rect>
+                         <x>533</x>
+                         <y>210</y>
+                         <width>655</width>
+                         <height>3</height>
+                        </rect>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">background-color: rgb(189, 147, 249)</string>
+                       </property>
+                       <property name="orientation">
+                        <enum>Qt::Horizontal</enum>
                        </property>
                       </widget>
                      </widget>
